--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@ html body {
    font-family: 'IBM Plex Sans', sans-serif;
 
 }
+#btnGroupAddon{
+  background-color:#1390e3;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
 .link{
     @apply pt-4 pb-4  relative cursor-pointer rounded-md ;
 }
