--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,19 @@ html body {
   margin-top: 48px;
   overflow: auto;
 }
+@media (min-width: 768px) {
+  .page{
+    @apply bg-slate-50  rounded-md p-4;
+    height: calc(100vh - 48px);
+    margin-top: 48px;
+    overflow: auto;
+  }
+}
+@media (min-width: 100px) and (max-width: 768px) {
+  .page{
+    @apply bg-slate-50  rounded-md p-4;
+    height:100%;
+    margin-top:0;
+    overflow: auto;
+    }
+}
