--- a/src/index.css
+++ b/src/index.css
@@ -3,47 +3,51 @@
 @tailwind utilities;
 html body {
   margin: 0;
-   font-family: 'IBM Plex Sans', sans-serif;
-
+  font-family: "IBM Plex Sans", sans-serif;
 }
 /* #root{
   height: 2000px;
 } */
-#btnGroupAddon{
-  background-color:#1390e3;
+#btnGroupAddon {
+  background-color: #1390e3;
   color: white;
   display: flex;
   align-items: center;
   padding: 0 20px;
 }
-.link{
-    @apply pt-4 pb-3  relative cursor-pointer rounded-md ;
+.link {
+  @apply pt-4 pb-3  relative cursor-pointer rounded-md;
 }
-.link .route i{
-  @apply mr-5 
+.link .route i {
+  @apply mr-5;
 }
-.route{
-  @apply no-underline  ml-4 text-gray-500 ;
-  transition: .3s;
+.route {
+  @apply no-underline  ml-4 text-gray-500;
+  transition: 0.3s;
 }
-.route.active{
-  color:#1390e3  ;
+.route.active {
+  color: #1390e3;
 }
 
-.route:hover{
-  color:#1390e3  ;
+.route:hover {
+  color: #1390e3;
 }
-.link .route.active{
-  color:#1390e3  ;
+.link .route.active {
+  color: #1390e3;
 }
 .link:hover .link .route,
-.link .route:hover{
-  color:#1390e3 ;
+.link .route:hover {
+  color: #1390e3;
 }
-.page{
+.page {
   @apply bg-slate-50  rounded-md p-4;
   height: calc(100vh - 48px);
   margin-top: 48px;
   overflow: auto;
 }
 
+@media (max-width: 640px) {
+  .page {
+    height: 964px;
+  }
+}
