--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,7 @@ html body {
   margin: 0;
   font-family: "IBM Plex Sans", sans-serif;
 }
-/* #root{
-  height: 2000px;
-} */
+
 #btnGroupAddon {
   background-color: #1390e3;
   color: white;
@@ -50,4 +48,38 @@ html body {
   .page {
     height: 964px;
   }
+}
+.menu {
+  width: 500px;
+  padding: 10px;
+  background-color: white;
+  color: black;
+  border-radius: 6px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.menu:hover {
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  color: #52b0ed;
+}
+.drop {
+  width: 500px;
+  padding: 10px;
+  color: rgb(241 245 249 / var(--tw-bg-opacity));
+  border-radius: 6px;
+  transition: 0.3s;
+  visibility: hidden;
+  height: 0;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.drop.active {
+  width: 500px;
+  padding: 10px;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  color: black;
+  border-radius: 6px;
+  transition: 0.3s;
+  visibility: visible;
+  height: fit-content;
+  max-height: 150px;
 }
