--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ html body {
 }
 .drop {
   width: 500px;
+  transition: 0.3s;
   padding: 10px;
   color: rgb(241 245 249 / var(--tw-bg-opacity));
   border-radius: 6px;
@@ -73,6 +74,7 @@ html body {
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 .drop.active {
+  transition: 0.3s;
   width: 500px;
   padding: 10px;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
