--- a/src/index.css
+++ b/src/index.css
@@ -64,24 +64,25 @@ html body {
 }
 .drop {
   width: 500px;
-  transition: 0.3s;
+  position: relative;
   padding: 10px;
-  color: rgb(241 245 249 / var(--tw-bg-opacity));
   border-radius: 6px;
-  transition: 0.3s;
+  transition: 0.2s;
+  opacity: 0;
   visibility: hidden;
-  height: 0;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  top: -45px;
+  height: 0;
 }
 .drop.active {
+  position: relative;
   transition: 0.3s;
   width: 500px;
   padding: 10px;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-  color: black;
   border-radius: 6px;
-  transition: 0.3s;
-  visibility: visible;
+  top: 0;
   height: fit-content;
+  visibility: visible;
+  opacity: 100%;
   max-height: 150px;
 }
