--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ html body {
 }
 .link {
   @apply pt-4 pb-3  relative cursor-pointer rounded-md;
+  height: 76px;
+
 }
 .link .route i {
   @apply mr-5;
@@ -43,12 +45,13 @@ html body {
   margin-top: 48px;
   overflow: auto;
 }
-
-@media (max-width: 640px) {
-  .page {
-    height: 964px;
-  }
+.page2 {
+  @apply bg-slate-50  rounded-md p-4;
+  height: 108vh;
+  margin-top: 48px;
+  overflow: auto;
 }
+
 .menu {
   width: 500px;
   padding: 10px;
