--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,14 @@ html body {
   opacity: 100%;
   max-height: 150px;
 }
+.email {
+  @apply w-96 h-96 m-auto relative translate-y-1/2  text-start shadow-xl p-5 rounded-md bg-secondry xl:-translate-x-10% xl:bottom-48;
+  position: relative;
+}
+.email::before {
+  @apply w-full h-10 flex justify-center items-center text-xl tracking-wider	  bg-email font-bold text-white rounded-t-md;
+  content: "email verification";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
